--- a/app/src/main/assets/login_background.html
+++ b/app/src/main/assets/login_background.html
@@ -36,10 +36,10 @@
             drops[x] = 1; 
         function draw()
         {
-            ctx.fillStyle = "rgba(0, 0, 0, 0.04)";
+            ctx.fillStyle = "rgba(110, 110, 110, 0.04)";
             ctx.fillRect(0, 0, c.width, c.height);
 
-            ctx.fillStyle = "#1d9a00";
+            ctx.fillStyle = "#FFFFFF";
             ctx.font = font_size + "px arial";
             for(var i = 0; i < drops.length; i++)
             {
