--- a/app/src/main/assets/login_background.html
+++ b/app/src/main/assets/login_background.html
@@ -39,7 +39,7 @@
             ctx.fillStyle = "rgba(0, 0, 0, 0.04)";
             ctx.fillRect(0, 0, c.width, c.height);
 
-            ctx.fillStyle = "#dfdbc8";
+            ctx.fillStyle = "#25BD0E";
             ctx.font = font_size + "px arial";
             for(var i = 0; i < drops.length; i++)
             {
